--- a/bezier-test.html
+++ b/bezier-test.html
@@ -5,9 +5,36 @@
 <title>Bezier Path Planner</title>
 
 <style>
-body { font-family: Arial, sans-serif; padding: 20px; }
-canvas { border: 1px solid #aaa; cursor: crosshair; }
-button { margin-top: 10px; padding: 6px 12px; }
+body {
+  font-family: Arial, sans-serif;
+  padding: 20px;
+}
+
+#fieldContainer {
+  position: relative;
+  width: 900px;
+  height: 900px;
+  border: 1px solid #aaa;
+}
+
+#fieldImage {
+  width: 100%;
+  height: 100%;
+  display: block;
+  pointer-events: none;
+}
+
+#canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: crosshair;
+}
+
+button {
+  margin-top: 10px;
+  padding: 6px 12px;
+}
 </style>
 </head>
 
@@ -16,7 +43,12 @@ button { margin-top: 10px; padding: 6px 12px; }
 <h2>Bezier Path Planner (ZED-style)</h2>
 <p>Click to add points. Drag points or handles to curve the path.</p>
 
-<canvas id="canvas" width="900" height="900"></canvas><br>
+<div id="fieldContainer">
+  <img id="fieldImage" src="field.png">
+  <canvas id="canvas" width="900" height="900"></canvas>
+</div>
+
+<br>
 <button onclick="clearPath()">Clear Path</button>
 
 <script>
@@ -32,8 +64,8 @@ let dragging = null;
 /* ===== DATA STRUCTURE =====
 point = {
   x, y,
-  h1: {x,y},   // incoming handle
-  h2: {x,y}    // outgoing handle
+  h1: {x,y},
+  h2: {x,y}
 }
 */
 
@@ -76,8 +108,7 @@ function clearPath() {
 
 /* ===== DRAWING ===== */
 function draw() {
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
   drawBezierPath();
   drawHandles();
   drawPoints();
@@ -91,8 +122,8 @@ function drawBezierPath() {
   ctx.beginPath();
   ctx.moveTo(points[0].x, points[0].y);
 
-  for (let i=1; i<points.length; i++) {
-    const p0 = points[i-1];
+  for (let i = 1; i < points.length; i++) {
+    const p0 = points[i - 1];
     const p1 = points[i];
     ctx.bezierCurveTo(
       p0.h2.x, p0.h2.y,
@@ -107,9 +138,9 @@ function drawPoints() {
   ctx.fillStyle = "red";
   ctx.font = "14px Arial";
 
-  points.forEach((p,i)=>{
+  points.forEach((p, i) => {
     drawCircle(p.x, p.y, POINT_RADIUS);
-    ctx.fillText(i+1, p.x+8, p.y-8);
+    ctx.fillText(i + 1, p.x + 8, p.y - 8);
   });
 }
 
@@ -117,45 +148,46 @@ function drawHandles() {
   ctx.strokeStyle = "#888";
   ctx.lineWidth = 1;
 
-  points.forEach(p=>{
-    // lines
+  points.forEach(p => {
     ctx.beginPath();
-    ctx.moveTo(p.x,p.y);
-    ctx.lineTo(p.h1.x,p.h1.y);
-    ctx.moveTo(p.x,p.y);
-    ctx.lineTo(p.h2.x,p.h2.y);
+    ctx.moveTo(p.x, p.y);
+    ctx.lineTo(p.h1.x, p.h1.y);
+    ctx.moveTo(p.x, p.y);
+    ctx.lineTo(p.h2.x, p.h2.y);
     ctx.stroke();
 
-    // handles
-    ctx.fillStyle="green";
-    drawCircle(p.h1.x,p.h1.y,HANDLE_RADIUS);
-    drawCircle(p.h2.x,p.h2.y,HANDLE_RADIUS);
+    ctx.fillStyle = "green";
+    drawCircle(p.h1.x, p.h1.y, HANDLE_RADIUS);
+    drawCircle(p.h2.x, p.h2.y, HANDLE_RADIUS);
   });
 }
 
 /* ===== UTIL ===== */
-function drawCircle(x,y,r){
+function drawCircle(x, y, r) {
   ctx.beginPath();
-  ctx.arc(x,y,r,0,Math.PI*2);
+  ctx.arc(x, y, r, 0, Math.PI * 2);
   ctx.fill();
 }
 
-function getMouse(e){
-  const r=canvas.getBoundingClientRect();
-  return { x:e.clientX-r.left, y:e.clientY-r.top };
+function getMouse(e) {
+  const r = canvas.getBoundingClientRect();
+  return {
+    x: e.clientX - r.left,
+    y: e.clientY - r.top
+  };
 }
 
-function findHit(p){
-  for (const pt of points){
-    if (dist(p,pt) < POINT_RADIUS+2) return {obj:pt};
-    if (dist(p,pt.h1) < HANDLE_RADIUS+2) return {obj:pt.h1};
-    if (dist(p,pt.h2) < HANDLE_RADIUS+2) return {obj:pt.h2};
+function findHit(p) {
+  for (const pt of points) {
+    if (dist(p, pt) < POINT_RADIUS + 2) return { obj: pt };
+    if (dist(p, pt.h1) < HANDLE_RADIUS + 2) return { obj: pt.h1 };
+    if (dist(p, pt.h2) < HANDLE_RADIUS + 2) return { obj: pt.h2 };
   }
   return null;
 }
 
-function dist(a,b){
-  return Math.hypot(a.x-b.x,a.y-b.y);
+function dist(a, b) {
+  return Math.hypot(a.x - b.x, a.y - b.y);
 }
 
 draw();
