--- a/bezier-test.html
+++ b/bezier-test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Bezier Path Planner with Robot</title>
+<title>Bezier Path Planner with Auton Export</title>
 
 <style>
 body {
@@ -33,7 +33,16 @@ body {
 
 button {
   margin-top: 10px;
+  margin-right: 10px;
   padding: 6px 12px;
+  font-size: 14px;
+}
+
+#autonOutput {
+  width: 100%;
+  height: 150px;
+  margin-top: 10px;
+  font-family: monospace;
 }
 </style>
 </head>
@@ -51,6 +60,8 @@ button {
 <br>
 <button onclick="clearPath()">Clear Path</button>
 <button onclick="exportAuton()">Export Auton</button>
+
+<textarea id="autonOutput" placeholder="Auton coordinates will appear here..." readonly></textarea>
 
 <script>
 /* ---------- CANVAS & FIELD SETUP ---------- */
@@ -104,6 +115,7 @@ function addPoint(x, y) {
 function clearPath() {
   points = [];
   draw();
+  document.getElementById("autonOutput").value = "";
 }
 
 /* ---------- DRAWING ---------- */
@@ -160,6 +172,7 @@ function drawHandles() {
   });
 }
 
+/* ---------- ROBOT FOOTPRINT ---------- */
 function drawRobot(x, y, angleRad) {
   const w = ROBOT_WIDTH_IN * PX_PER_INCH;
   const h = ROBOT_LENGTH_IN * PX_PER_INCH;
@@ -208,22 +221,26 @@ function dist(a, b) {
   return Math.hypot(a.x - b.x, a.y - b.y);
 }
 
-/* ---------- EXPORT AUTON ---------- */
+/* ---------- AUTON EXPORT ---------- */
 function exportAuton() {
   if (points.length < 2) {
     alert("Need at least 2 points");
     return;
   }
-  const auton = points.map((p, i) => {
-    return {
-      index: i + 1,
-      x_in: +(p.x / PX_PER_INCH).toFixed(2),
-      y_in: +(p.y / PX_PER_INCH).toFixed(2)
-    };
-  });
+  const auton = points.map((p, i) => ({
+    index: i + 1,
+    x_in: +(p.x / PX_PER_INCH).toFixed(2),
+    y_in: +(p.y / PX_PER_INCH).toFixed(2)
+  }));
+
   const text = auton.map(p => `moveTo(${p.x_in}, ${p.y_in});`).join("\n");
+
+  // Show in textarea and copy to clipboard
+  const outputBox = document.getElementById("autonOutput");
+  outputBox.value = text;
   navigator.clipboard.writeText(text);
-  alert("Auton path copied to clipboard");
+
+  alert("Auton coordinates copied to clipboard!");
 }
 
 /* ---------- INIT ---------- */
