--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>VEX Timer + Path Planner</title>
+<title>VEX Timer + Bezier Path Planner</title>
 
 <style>
 body { font-family: Arial, sans-serif; padding: 20px; }
@@ -23,7 +23,7 @@ th { background: #eee; }
 
 <body>
 
-<h2>VEX Push Back Practice + Path Planner</h2>
+<h2>VEX Push Back Practice + Bezier Path Planner</h2>
 
 <h3>Section Setup</h3>
 <table>
@@ -44,7 +44,7 @@ th { background: #eee; }
 
 <br><br>
 <label>Section:</label>
-<select id="sectionSelect"></select>
+<select id="sectionSelect" onchange="draw()"></select>
 
 <button onclick="startSection()">Start</button>
 <button onclick="stopSection()">Stop</button>
@@ -79,7 +79,7 @@ th { background: #eee; }
 /* ---------- DATA ---------- */
 let sections = JSON.parse(localStorage.getItem("sections")) || [{ name:"Start to Goal", distance:12 }];
 let runs = JSON.parse(localStorage.getItem("runs")) || { driver:{}, auton:{} };
-let paths = JSON.parse(localStorage.getItem("paths")) || {}; // store paths per section
+let paths = JSON.parse(localStorage.getItem("paths")) || {}; // per-section paths
 
 let startTime=null, timerInterval=null;
 
@@ -133,7 +133,7 @@ function renderSectionDropdown(){
 /* ---------- TIMER ---------- */
 function startSection(){
   if(timerInterval) return;
-  const activeSection=document.getElementById("sectionSelect").value;
+  const activeSection=Number(document.getElementById("sectionSelect").value);
   startTime=performance.now();
   timerInterval=setInterval(()=>{
     document.getElementById("timer").textContent="Time: "+((performance.now()-startTime)/1000).toFixed(2)+" s";
@@ -145,7 +145,7 @@ function stopSection(){
   clearInterval(timerInterval); timerInterval=null;
   const t=(performance.now()-startTime)/1000;
   const m=document.getElementById("mode").value;
-  const sec=document.getElementById("sectionSelect").value;
+  const sec=Number(document.getElementById("sectionSelect").value);
   runs[m][sec]??=[];
   runs[m][sec].push(t);
   save();
@@ -173,81 +173,114 @@ function renderResults(){
   });
 }
 
-/* ---------- PATH DRAWING ---------- */
+/* ---------- BEZIER PATH DRAWING ---------- */
 const canvas=document.getElementById("fieldCanvas");
 const ctx=canvas.getContext("2d");
-let drawing=false;
-let currentPath=[];
+const POINT_RADIUS=6,HANDLE_RADIUS=4;
+let dragging=null;
 
 canvas.addEventListener("mousedown", e=>{
-  const sec=document.getElementById("sectionSelect").value;
-  paths[sec] ??= [];
-  drawing = true;
-  const p = getMouse(e);
-  currentPath = [p];
-  paths[sec].push(currentPath);
+  const sec=Number(document.getElementById("sectionSelect").value);
+  paths[sec]??=[];
+  const p=getMouse(e);
+  dragging=findHit(p);
+  if(!dragging){
+    // add new anchor
+    const offset=60;
+    paths[sec].push({ x:p.x, y:p.y, h1:{x:p.x-offset,y:p.y}, h2:{x:p.x+offset,y:p.y} });
+  }
   draw();
 });
 
 canvas.addEventListener("mousemove", e=>{
-  if(!drawing) return;
-  const p = getMouse(e);
-  currentPath.push(p);
+  if(!dragging) return;
+  const p=getMouse(e);
+  dragging.obj.x=p.x; dragging.obj.y=p.y;
   draw();
 });
 
-canvas.addEventListener("mouseup", e=>{ drawing=false; });
-canvas.addEventListener("mouseleave", e=>{ drawing=false; });
+canvas.addEventListener("mouseup", ()=>{ dragging=null; });
+canvas.addEventListener("mouseleave", ()=>{ dragging=null; });
 
 function draw(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   drawPaths();
+  drawAnchors();
+  drawHandles();
 }
 
 function drawPaths(){
-  const sec=document.getElementById("sectionSelect").value;
-  const secPaths = paths[sec]||[];
-  ctx.lineWidth=3; ctx.strokeStyle="blue";
-  secPaths.forEach((pArr, idx)=>{
-    if(!pArr.length) return;
-    ctx.beginPath();
-    ctx.moveTo(pArr[0].x, pArr[0].y);
-    for(let i=1;i<pArr.length;i++){
-      ctx.lineTo(pArr[i].x,pArr[i].y);
-    }
-    ctx.stroke();
-    ctx.fillStyle="red"; ctx.font="14px Arial";
-    ctx.fillText(idx+1,pArr[0].x+5,pArr[0].y-5);
+  const sec=Number(document.getElementById("sectionSelect").value);
+  const pts=paths[sec]||[];
+  if(pts.length<2) return;
+  ctx.lineWidth=3; ctx.strokeStyle="blue"; ctx.beginPath();
+  ctx.moveTo(pts[0].x, pts[0].y);
+  for(let i=1;i<pts.length;i++){
+    const p0=pts[i-1], p1=pts[i];
+    ctx.bezierCurveTo(p0.h2.x,p0.h2.y,p1.h1.x,p1.h1.y,p1.x,p1.y);
+  }
+  ctx.stroke();
+}
+
+function drawAnchors(){
+  const sec=Number(document.getElementById("sectionSelect").value);
+  const pts=paths[sec]||[];
+  ctx.fillStyle="red"; ctx.font="14px Arial";
+  pts.forEach((p,i)=>{
+    drawCircle(p.x,p.y,POINT_RADIUS);
+    ctx.fillText(i+1,p.x+8,p.y-8);
   });
 }
 
+function drawHandles(){
+  const sec=Number(document.getElementById("sectionSelect").value);
+  const pts=paths[sec]||[];
+  ctx.strokeStyle="#888"; ctx.lineWidth=1;
+  pts.forEach(p=>{
+    ctx.beginPath();
+    ctx.moveTo(p.x,p.y); ctx.lineTo(p.h1.x,p.h1.y);
+    ctx.moveTo(p.x,p.y); ctx.lineTo(p.h2.x,p.h2.y);
+    ctx.stroke();
+    ctx.fillStyle="green";
+    drawCircle(p.h1.x,p.h1.y,HANDLE_RADIUS);
+    drawCircle(p.h2.x,p.h2.y,HANDLE_RADIUS);
+  });
+}
+
+function drawCircle(x,y,r){ctx.beginPath();ctx.arc(x,y,r,0,Math.PI*2);ctx.fill();}
+function getMouse(e){ const r=canvas.getBoundingClientRect(); return { x:e.clientX-r.left, y:e.clientY-r.top }; }
+function findHit(p){
+  const sec=Number(document.getElementById("sectionSelect").value);
+  const pts=paths[sec]||[];
+  for(const pt of pts){
+    if(dist(p,pt)<POINT_RADIUS+2) return {obj:pt};
+    if(dist(p,pt.h1)<HANDLE_RADIUS+2) return {obj:pt.h1};
+    if(dist(p,pt.h2)<HANDLE_RADIUS+2) return {obj:pt.h2};
+  }
+  return null;
+}
+function dist(a,b){ return Math.hypot(a.x-b.x,a.y-b.y); }
+
 function clearPath(){
-  const sec=document.getElementById("sectionSelect").value;
-  paths[sec] = [];
+  const sec=Number(document.getElementById("sectionSelect").value);
+  paths[sec]=[];
   draw();
 }
 
-function getMouse(e){
-  const r=canvas.getBoundingClientRect();
-  return { x:e.clientX-r.left, y:e.clientY-r.top };
-}
-
 /* ---------- AUTON EXPORT ---------- */
-const FIELD_INCHES = 144;
-const PX_PER_INCH = canvas.width/FIELD_INCHES;
+const FIELD_INCHES=144;
+const PX_PER_INCH=canvas.width/FIELD_INCHES;
 
 function exportAuton(){
   const lines=[];
   sections.forEach((s,i)=>{
-    const secPaths = paths[i]||[];
-    if(secPaths.length<1) return;
+    const pts=paths[i]||[];
+    if(pts.length<1) return;
     lines.push(`// Section ${i+1}: ${s.name}`);
-    secPaths.forEach(pArr=>{
-      pArr.forEach(p=>{
-        const x=(p.x/PX_PER_INCH).toFixed(2);
-        const y=(p.y/PX_PER_INCH).toFixed(2);
-        lines.push(`moveTo(${x}, ${y});`);
-      });
+    pts.forEach(p=>{
+      const x=(p.x/PX_PER_INCH).toFixed(2);
+      const y=(p.y/PX_PER_INCH).toFixed(2);
+      lines.push(`moveTo(${x}, ${y});`);
     });
   });
   const text=lines.join("\n");
@@ -259,5 +292,6 @@ function exportAuton(){
 /* ---------- INIT ---------- */
 draw();
 </script>
+
 </body>
 </html>
